# COGNISCRIBE

./: .dockerignore  .env.example  .env.local  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  BUG_FIXES_AND_FEATURES.md  CI-CD.md  CODE_REVIEW.md  DATABASE.md  DEPLOYMENT.md  Dockerfile  ENHANCEMENTS_COMPLETE.md  IMPROVEMENTS_SUMMARY.md  Makefile  QUICK_START.md  README.md  ROADMAP.md  SECURITY.md  TESTING.md  bootstrap_cliniscribe.sh  constraints.txt  docker-compose-phase3.yml  docker-compose.yml  fill_cliniscribe_code.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  requirements_core.txt  requirements_dev.txt  setup.sh
.github/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml  integration-tests.yml  lint.yml  test.yml
.venv311/: pyvenv.cfg
Updates/: create-requirements.sh  phase-2-complete.sh  phase-3-complete.sh  phase-4-complete.sh  phase-4-quick-exec.sh
client/web-react/: Dockerfile  index.html  nginx.conf  package.json
client/web-react/src/: App.jsx
client/web-react/src/api/: cogniscribe.js  pipeline.js
client/web-react/src/components/: Footer.jsx  LoadingSpinner.jsx  ResultsPanel.jsx  UploadCard.jsx
desktop-app/: ARCHITECTURE.md  EASY_INSTALL.md  OBS_AUTO_INSTALL_README.md  PAYMENT_INTEGRATION_GUIDE.md  QUICKSTART.md  README.md  START_HERE.md  package-lock.json  package.json
desktop-app/build-scripts/: bundle-python.sh
desktop-app/installers/macos/: build-dmg.sh  build-pkg.sh
desktop-app/src/: App.tsx
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/icons/: create_icons.sh  icon.icns
desktop-app/src-tauri/resources/python-backend/_internal/: libSvtAv1Enc.3.1.0.dylib  libdav1d.7.dylib  libmpdec.4.dylib  libomp.dylib
desktop-app/src-tauri/resources/python-backend/_internal/av/.dylibs/: libopencore-amrwb.0.dylib  libvorbisenc.2.dylib  libx264.165.dylib
desktop-app/src-tauri/resources/python-backend/_internal/src/: __init__.py
desktop-app/src-tauri/resources/python-backend/_internal/src/api/: main.py
desktop-app/src-tauri/resources/python-backend/_internal/src/api/routers/: pipeline.py  transcribe_chunk.py
desktop-app/src-tauri/resources/python-backend/_internal/src/api/services/: cleanup.py  summarizer.py  task_manager.py
desktop-app/src-tauri/resources/python-backend/_internal/src/middleware/: auth.py  rate_limit.py
desktop-app/src-tauri/resources/python-backend/_internal/src/utils/: settings.py  validation.py
desktop-app/src-tauri/resources/python-backend/_internal/torchaudio/.dylibs/: libc++.1.0.dylib
desktop-app/src-tauri/resources/python-backend/_internal/websockets-15.0.1.dist-info/: RECORD
desktop-app/src-tauri/src/: config.rs  main.rs  model_downloader.rs  process_manager.rs
desktop-app/src-tauri/src/audio/: mod.rs  processor.rs  recorder.rs
desktop-app/src-tauri/src/obs/: config_writer.rs  detector.rs  installer.rs  manager.rs  mod.rs  types.rs
desktop-app/src/components/Dashboard/: Dashboard.tsx  RecordCard.tsx  StatusBar.tsx  UploadCard.tsx
desktop-app/src/components/OBS/: OBSRecordPanel.tsx  OBSSetupWizard.tsx  ProUpgradeWizard.tsx
desktop-app/src/components/SetupWizard/: ModelDownloadStep.tsx  SetupWizard.tsx
desktop-app/src/hooks/: useAudioRecorder.ts  useNativeRecorder.ts
docker/: Dockerfile  nginx.conf
docs/: AUDIO_COMPONENTS.md  CI_CD_SETUP.md  QUICK_START.md  TESTING.md
scripts/: init_db.py  test-deployment.sh
src/api/: main.py  schemas.py
src/api/middleware/: __init__.py  jwt_auth.py
src/api/routers/: auth.py  healthcheck.py  pipeline.py  stats.py  transcribe_chunk.py
src/api/services/: audio_preprocess.py  cleanup.py  reasoning.py  summarizer.py  task_manager.py  transcriber.py
src/cache/: redis_config.py
src/database/: config.py  models.py  transactions.py
src/middleware/: __init__.py  auth.py  rate_limit.py
src/services/: audit_logger.py  task_manager.py  usage_tracker.py
src/utils/: error_codes.py  errors.py  file_deduplication.py  file_utils.py  phi_detector.py  request_id.py  retry.py  settings.py  startup_validation.py  validation.py
tests/: conftest.py  test_api_pipeline.py  test_api_pipeline_enhanced.py  test_auth.py  test_database.py  test_integration.py  test_performance.py  test_phi_detector.py  test_pipeline.py  test_redis.py  test_settings.py  test_validation.py
tests/integration/: conftest.py  test_full_pipeline.py
tests/unit/: __init__.py  test_audio_preprocess.py  test_edge_cases.py  test_error_handling.py  test_healthcheck.py  test_integration_resilience.py  test_summarizer.py  test_task_manager.py  test_transcribe_chunk.py  test_transcriber.py
