[package]
name = "cliniscribe-desktop"
version = "1.0.0"
description = "CliniScribe Desktop App"
authors = ["CliniScribe Team"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = [ "http-request", "fs-read-file", "fs-remove-dir", "fs-rename-file", "fs-write-file", "fs-copy-file", "fs-read-dir", "fs-create-dir", "fs-remove-file", "fs-exists", "dialog-all", "notification-all", "path-all", "shell-sidecar"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"

# OBS WebSocket Integration
obws = "0.11"
async-trait = "0.1"
sysinfo = "0.30"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
